--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+beautifulsoup4==4.12.2
+bs4==0.0.1
 certifi==2023.5.7
 charset-normalizer==3.2.0
 colorama==0.4.6
+fake-useragent==1.1.3
 idna==3.4
 phonenumbers==8.13.16
 requests==2.31.0
 scapy==2.5.0
+soupsieve==2.4.1
 urllib3==2.0.3
